--- a/sapui5walkthrough/webapp/i18n/i18n.properties
+++ b/sapui5walkthrough/webapp/i18n/i18n.properties
@@ -9,3 +9,6 @@ appTitle=SAPUI5 Walkthrough
 appDescription=SAPUI5 walkthrough
 #XTIT: Main view title
 title=SAPUI5 Walkthrough
+
+showHelloButtonText=Say Hello
+helloMsg=Hello {0}
