--- a/sapui5walkthrough/webapp/i18n/i18n.properties
+++ b/sapui5walkthrough/webapp/i18n/i18n.properties
@@ -13,3 +13,4 @@ title=SAPUI5 Walkthrough
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
 helloPanelTitle=Hello World
+openDialogButtonText=Say Hello With Dialog
