--- a/sapui5walkthrough/webapp/i18n/i18n.properties
+++ b/sapui5walkthrough/webapp/i18n/i18n.properties
@@ -14,3 +14,4 @@ showHelloButtonText=Say Hello
 helloMsg=Hello {0}
 helloPanelTitle=Hello World
 openDialogButtonText=Say Hello With Dialog
+dialogCloseButtonText=Ok
