invoice list displaying properly

--- a/sapui5walkthrough/webapp/i18n/i18n.properties
+++ b/sapui5walkthrough/webapp/i18n/i18n.properties
@@ -10,8 +10,13 @@ appDescription=SAPUI5 walkthrough
 #XTIT: Main view title
 title=SAPUI5 Walkthrough
 
+# Hello panel
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+homePageTitle=Walkthrough
 helloPanelTitle=Hello World
 openDialogButtonText=Say Hello With Dialog
 dialogCloseButtonText=Ok
+
+# Invoice List
+invoiceListTitle=Invoices
