step 22 complete, status added with custom formatter

--- a/sapui5walkthrough/webapp/i18n/i18n.properties
+++ b/sapui5walkthrough/webapp/i18n/i18n.properties
@@ -20,3 +20,6 @@ dialogCloseButtonText=Ok
 
 # Invoice List
 invoiceListTitle=Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
